<resources>
    <string name="app_name">Object Finder</string>
    <string name="noAccountLabel">You are not signed up? Sign up <b>here</b>!</string>
    <string name="title_activity_map_set_location">Map</string>
    <string name="title_activity_show_location_on_map">Map</string>
    <string name="object_name_et_hint">Object name</string>
    <string name="object_description_et_hint">Object description</string>
    <string name="capture_image_btn_text">capture photo of an object</string>
    <string name="create_new_object_btn_text">create new object</string>
    <string name="go_back_to_object_list_btn_text">go back to object list</string>
    <string name="create_new_location_btn_text">Create new location</string>
    <string name="logout_btn_text">Logout</string>
    <string name="login_activity_header">Login</string>
    <string name="login_header2_tv">Login to your account</string>
    <string name="login_email_input_hint">Email</string>
    <string name="login_pass_input_hint">Password</string>
    <string name="confirm_location_map_set_location_btn_text">confirm location</string>
    <string name="create_location_new_loc_act_text">create location</string>
    <string name="choose_location_on_map_new_loc_act_text">choose location on the map</string>
    <string name="go_back_to_location_list_new_loc_act_text">go back to location list</string>
    <string name="location_name_new_loc_act_et_hint">Location name</string>
    <string name="go_back_to_locations_list_obj_list_act_text">go back to locations list</string>
    <string name="show_location_on_map_btn_obj_list_act_text">show location on map</string>
    <string name="create_new_object_item_btn_obj_list_act_text">create new object item</string>
    <string name="go_back_to_object_list_btn_show_loc_on_map_act_text">Go back to object list</string>
    <string name="sign_up_tv">Sign Up</string>
    <string name="create_a_new_account_tv">Create a new account!</string>
    <string name="go_back_to_login_btn_text_signup_act">Go back to login</string>
    <string name="take_photo_btn_text">Take Photo</string>
    <string name="location_name_tv_loc_item_act">Location name</string>
    <string name="delete_iv_loc_item_act">Delete</string>
    <string name="enter_location_iv_loc_item_act">Enter Location</string>
    <string name="object_name_tv_obj_item">Object name</string>
    <string name="object_description_tv_obj_item">Object description</string>
    <string name="image_of_specific_object_in_this_location">Image of specific object in this location</string>
    <string name="icon_for_deletion">Icon for deletion</string>
</resources>