<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/titleLabelTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_activity_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/commonMargin"
        android:textSize="@dimen/login_header_text_size"
        />

    <TextView
        android:id="@+id/login_header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_header2_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLabelTv"
        android:layout_marginTop="@dimen/commonMargin10dp"
        android:textSize="@dimen/login_header2_text_size"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_header2"
        android:layout_marginTop="@dimen/login_act_header_input_distance"
        android:layout_marginStart="@dimen/commonMargin"
        android:layout_marginEnd="@dimen/commonMargin"
        >

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/login_email_input_hint"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTil"
        android:layout_marginTop="@dimen/commonMargin"
        android:layout_marginStart="@dimen/commonMargin"
        android:layout_marginEnd="@dimen/commonMargin"
        >

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_pass_input_hint"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_activity_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTil"
        android:layout_marginTop="@dimen/commonMargin"
        android:layout_marginStart="@dimen/commonMargin"
        android:layout_marginEnd="@dimen/commonMargin"
        />

    <TextView
        android:id="@+id/noAccountTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noAccountLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/commonMargin"
        android:textAlignment="center"
        />


</androidx.constraintlayout.widget.ConstraintLayout>